# Kaetram-App

./: .gitignore  .gitmodules  Cargo.toml  README  README.md  appflow.config.json  capacitor.config.ts  ionic.config.json  package.json  tauri.conf.json
.github/workflows/: build.yml
android/: build.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kaetram/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml  styles.xml
electron/: build.ts  capacitor.config.ts  electron-builder.config.json  live-runner.ts  pack.ts  package-lock.json  package.json  tsconfig.json
electron/src/: main.ts  preload.ts  setup.ts
electron/src/rt/: electron-rt.ts
icons/: icon.icns
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src/: lib.rs
